fixed issue with invisible text

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
 	font-weight: 400;
 
 	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
+	color: hsl(var(--pure-black));
 	background-color: #242424;
 
 	font-synthesis: none;
